--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots": [
+      "node_modules/@types",
+      "src/custom-typings"
+    ]
   },
   "include": [
     "src"
-  ]
+  ],
+ 
 }
