--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "ityped": "^1.0.3",
     "jquery": "^3.7.1",
