--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-typed": "^2.0.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
